--- a/SlidingMenu/res/anim/slide_in_left.xml
+++ b/SlidingMenu/res/anim/slide_in_left.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="@android:integer/config_mediumAnimTime" >
+<set xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <translate
-        android:fromXDelta="100%p"
-        android:toXDelta="0" />
-
-    <alpha
-        android:fromAlpha="0.0"
-        android:toAlpha="1.0" />
+    <objectAnimator
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:duration="300"
+        android:propertyName="x"
+        android:valueFrom="1000"
+        android:valueTo="0"
+        android:valueType="floatType" />
 
 </set>
