--- a/SlidingMenu/res/anim/slide_out_right.xml
+++ b/SlidingMenu/res/anim/slide_out_right.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="@android:integer/config_mediumAnimTime" >
+<set xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <translate
-        android:fromXDelta="0"
-        android:toXDelta="-100%p" />
-
-    <alpha
-        android:fromAlpha="1.0"
-        android:toAlpha="0.0" />
+    <objectAnimator
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:duration="300"
+        android:propertyName="x"
+        android:valueFrom="0"
+        android:valueTo="-1000"
+        android:valueType="floatType" />
 
 </set>
