--- a/SlidingMenu/res/layout/view_profile.xml
+++ b/SlidingMenu/res/layout/view_profile.xml
@@ -7,48 +7,200 @@
         android:id="@+id/viewPic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/default_face" />
-
-    <TextView
-        android:id="@+id/viewInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/viewName"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:text="Additional Info" />
+        android:layout_marginLeft="14dp"
+        android:layout_marginTop="17dp"
+        android:src="@drawable/ic_launcher" />
 
     <TextView
         android:id="@+id/viewName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/viewPic"
-        android:layout_centerHorizontal="true"
+        android:layout_alignTop="@+id/viewPic"
+        android:layout_marginLeft="23dp"
+        android:layout_toRightOf="@+id/viewPic"
+        android:text="Name"
+        android:textColor="#669900"
+        android:textSize="24dp" />
+
+    <TextView
+        android:id="@+id/viewInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/viewName"
+        android:layout_below="@+id/viewName"
         android:layout_marginTop="10dp"
-        android:text="Connection Name" />
+        android:text="Additional Info" />
 
-    <TextView
-        android:id="@+id/vScore"
+    <!-- Displays Vouch Scores -->
+
+    <LinearLayout
+        android:id="@+id/linearLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="96"
-        android:textSize="72dp"
-        android:textColor = "#669900" />
+        android:layout_alignLeft="@+id/viewPic"
+        android:layout_below="@+id/viewInfo"
+        android:layout_marginTop="19dp"
+        android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/textView1"
+        <LinearLayout
+            android:layout_width="50dp"
+            android:layout_height="40dp"
+            android:background="#ddd7d7"
+            android:orientation="vertical" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:text="VouchScore"
+                android:textSize="8dp" />
+
+            <TextView
+                android:id="@+id/vouch_score"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="0"
+                android:textColor="#669900"
+                android:textSize="16dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="50dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="#ddd7d7"
+            android:orientation="vertical" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:text="Connections"
+                android:textSize="8dp" />
+
+            <TextView
+                android:id="@+id/num_connections"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="0"
+                android:textColor="#669900"
+                android:textSize="16dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="50dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="20dp"
+            android:background="#ddd7d7"
+            android:orientation="vertical" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:text="Vouched For"
+                android:textSize="8dp" />
+
+            <TextView
+                android:id="@+id/num_vouched"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="0"
+                android:textColor="#669900"
+                android:textSize="16dp" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/vScore"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="41dp"
-        android:text="Vouched Score"
-        android:textSize="36dp"
-        android:textColor="#374150" />
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/linearLayout1"
+        android:layout_marginTop="25dp"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="VOUCHED REPUTATION\t\t%VOUHED FOR\t\t SCORE"
+            android:textColor="#669900"
+            android:textSize="12dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Professionalism" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Integrity" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Communication" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Innovation" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Productivity" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Adaptability" />
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Leadership" />
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Teamwork" />
+    </LinearLayout>
 
 </RelativeLayout>
