--- a/SlidingMenu/res/layout-sw600dp/view_profile.xml
+++ b/SlidingMenu/res/layout-sw600dp/view_profile.xml
@@ -22,7 +22,7 @@
         android:layout_toRightOf="@+id/viewPic"
         android:text="Name"
         android:textColor="#669900"
-        android:textSize="24dp" />
+        android:textSize="48dp" />
 
     <TextView
         android:id="@+id/viewInfo"
@@ -31,92 +31,102 @@
         android:layout_alignLeft="@+id/viewName"
         android:layout_below="@+id/viewName"
         android:layout_marginTop="10dp"
-        android:text="Additional Info" />
+        android:text="Additional Info"
+        android:textSize="28dp" />
 
     <!-- Displays Vouch Scores -->
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/linearLayout1"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="251dp"
-        android:orientation="vertical" >
+      <LinearLayout
+                android:id="@+id/LinearLayout01"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/ImageView01"
+                android:layout_below="@+id/LinearLayout02"
+                android:layout_marginTop="350dp"
+                android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="VOUCHED REPUTATION\t\t%VOUHED FOR\t\t SCORE"
-            android:textColor="#669900"
-            android:textSize="12dp"
-            android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/TextView05"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="VOUCHED REPUTATION\t\t\t\t\t\t\t SCORE"
+                    android:textColor="#669900"
+                    android:textSize="28dp"
+                    android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Professionalism" />
+                <TextView
+                    android:id="@+id/TextView03"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Professionalism"
+                    android:textSize="28dp" />
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Integrity" />
+                <TextView
+                    android:id="@+id/TextView07"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Integrity"
+                    android:textSize="28dp" />
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Communication" />
+                <TextView
+                    android:id="@+id/TextView06"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Communication"
+                    android:textSize="28dp" />
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Innovation" />
+                <TextView
+                    android:id="@+id/TextView09"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Innovation"
+                    android:textSize="28dp" />
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Productivity" />
+                <TextView
+                    android:id="@+id/TextView08"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Productivity"
+                    android:textSize="28dp" />
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Adaptability" />
+                <TextView
+                    android:id="@+id/TextView12"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Adaptability"
+                    android:textSize="28dp" />
 
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Leadership" />
+                <TextView
+                    android:id="@+id/TextView11"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Leadership"
+                    android:textSize="28dp" />
 
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Teamwork" />
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/TextView13"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Teamwork"
+                    android:textSize="28dp" />
+            </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout1"
@@ -124,12 +134,12 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/viewPic"
         android:layout_below="@+id/viewInfo"
-        android:layout_marginTop="137dp"
+        android:layout_marginTop="50dp"
         android:orientation="horizontal" >
 
         <LinearLayout
-            android:layout_width="50dp"
-            android:layout_height="40dp"
+            android:layout_width="150dp"
+            android:layout_height="120dp"
             android:background="#ddd7d7"
             android:orientation="vertical" >
 
@@ -139,7 +149,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="5dp"
                 android:text="VouchScore"
-                android:textSize="8dp" />
+                android:textSize="24dp" />
 
             <TextView
                 android:id="@+id/vouch_score"
@@ -148,12 +158,12 @@
                 android:layout_gravity="center"
                 android:text="0"
                 android:textColor="#669900"
-                android:textSize="16dp" />
+                android:textSize="56dp" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="50dp"
-            android:layout_height="40dp"
+            android:layout_width="150dp"
+            android:layout_height="120dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:background="#ddd7d7"
@@ -164,22 +174,22 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="5dp"
-                android:text="Connections"
-                android:textSize="8dp" />
+                android:text="Given"
+                android:textSize="24dp" />
 
             <TextView
-                android:id="@+id/num_connections"
+                android:id="@+id/num_given"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="0"
                 android:textColor="#669900"
-                android:textSize="16dp" />
+                android:textSize="56dp" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="50dp"
-            android:layout_height="40dp"
+            android:layout_width="150dp"
+            android:layout_height="120dp"
             android:layout_marginRight="20dp"
             android:background="#ddd7d7"
             android:orientation="vertical" >
@@ -189,17 +199,17 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="5dp"
-                android:text="Vouched For"
-                android:textSize="8dp" />
+                android:text="Received"
+                android:textSize="24dp" />
 
             <TextView
-                android:id="@+id/num_vouched"
+                android:id="@+id/num_received"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="0"
                 android:textColor="#669900"
-                android:textSize="16dp" />
+                android:textSize="56dp" />
         </LinearLayout>
     </LinearLayout>
 
