--- a/Vouched/res/layout/view_profile.xml
+++ b/Vouched/res/layout/view_profile.xml
@@ -30,8 +30,8 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/viewName"
         android:layout_below="@+id/viewName"
-        android:layout_marginTop="10dp"
-        android:text="Additional Info" />
+        android:text="Additional Info"
+        android:textSize="12dp" />
 
     <!-- Displays Vouch Scores -->
 
